--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -198,7 +198,7 @@ body {
 }
 .stat_header {
   position: absolute;
-  top: -20px;
+  top: -24px;
   left: 1%;
   transform: translateX(-50%);
   padding: 10px 20px;
@@ -207,6 +207,7 @@ body {
   font-size: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
   box-shadow: inset 0 -0.365vw #53055c, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  border: solid 4px #53055c;
 }
 .stat_header::before {
   content: ' ';
