--- a/public/css/login.css
+++ b/public/css/login.css
@@ -98,7 +98,7 @@ body {
   box-sizing: border-box;
   padding: 10px 20px;
   font-family: Pixelify Sans;
-  margin: 0 auto; 
+  margin: 0px auto 0;
   box-shadow: inset 0 -0.365vw #5a0463, 3px 3px 15px rgba(0, 0, 0, 0.6);
   display: flex;
   flex-direction: column;
