--- a/public/css/news.css
+++ b/public/css/news.css
@@ -111,3 +111,18 @@ body {
   line-height: 1.8;
   transition: all 0.3s ease-in-out;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  background: #6f057a;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #8c099a;
+  border-radius: 10px;
+  border: 3px solid #6f057a;
+}
