--- a/public/css/credits.css
+++ b/public/css/credits.css
@@ -12,6 +12,22 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0; 
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
 .navbar a {
   float: left;
   font-size: 16px;
@@ -77,6 +93,16 @@ body {
   font-size: 26px;
   color: #fff;
   text-shadow: #000 1px 0 13px;
+}
+@media screen and (max-width: 600px) {
+  .title_p {
+    margin-left: 80%;
+    position: absolute;
+    top: 1%;
+    font-size: 24px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
+  }
 }
 .bg_img {
   position: fixed;
