--- a/public/css/login.css
+++ b/public/css/login.css
@@ -24,6 +24,22 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0; 
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
 .navbar a {
   float: left;
   font-size: 16px;
@@ -88,6 +104,16 @@ body {
   color: #fff;
   text-shadow: #000 1px 0 13px;
 }
+@media screen and (max-width: 600px) {
+  .title_p {
+    margin-left: 80%;
+    position: absolute;
+    top: 1%;
+    font-size: 24px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
+  }
+}
 .login-container {
   width: 440px;
   font-size: 18px;
@@ -104,6 +130,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 600px) {
+  .login-container {
+    width: 350px;
+    padding: 20px;
+  }
 }
 .login-title {
   font-size: 40px;
