--- a/public/css/market.css
+++ b/public/css/market.css
@@ -122,17 +122,15 @@ body {
 }
 
 .resultBox {
-  height: 210px;
-  width: 210px;
+  height: 365px;
+  width: 360px;
   border-radius: 5px;
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   cursor: pointer;
-  background: radial-gradient(circle, #581060, #6f057a);
+  padding: 10px;
 }
 
 ::-webkit-scrollbar {
