--- a/public/css/news.css
+++ b/public/css/news.css
@@ -25,6 +25,22 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0; 
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
 .navbar a {
   float: left;
   font-size: 16px;
@@ -88,6 +104,16 @@ body {
   color: #fff;
   text-shadow: #000 1px 0 13px;
 }
+@media screen and (max-width: 600px) {
+  .title_p {
+    margin-left: 80%;
+    position: absolute;
+    top: 1%;
+    font-size: 24px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
+  }
+}
 .img {
   position: relative;
   top: 50%;
@@ -110,6 +136,18 @@ body {
   font-size: 18px;
   line-height: 1.8;
   transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .news-container {
+
+    padding: 40px;
+    margin: 80px auto;
+    color: #fff;
+    font-size: 12px;
+    line-height: 1.8;
+    transition: all 0.3s ease-in-out;
+  }
 }
 
 ::-webkit-scrollbar {
