--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -18,6 +18,7 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
@@ -25,6 +26,25 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -47,7 +67,11 @@ body {
   color: #fff;
   text-shadow: #000 1px 0 13px;
 }
-
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
+}
 .main_container {
   display: flex;
   flex-direction: column;
@@ -67,6 +91,15 @@ body {
   margin-right: 10px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+  #pfp {
+    width: 70px;
+    height: 70px;
+    margin-left: 0%;
+  }
+}
+
 .banner-container {
   position: relative;
   display: inline-block;
@@ -78,8 +111,16 @@ body {
   width: 350px;
   height: 100px;
   display: block;
-  margin: 0 auto;
+  margin-left: 8%;
 }
+
+@media screen and (max-width: 600px) {
+  #banner {
+    width: 200px;
+    height: 100px;
+  }
+}
+
 #username {
   position: absolute;
   top: 50%;
@@ -126,6 +167,13 @@ body {
   font-family: Pixelify Sans;
   pointer-events: auto;
 }
+
+@media screen and (max-width: 600px) {
+  .button {
+    display: none;
+  }
+}
+
 .unlockBlooks {
   display: flex;
   align-items: center;
@@ -146,9 +194,16 @@ body {
   transition: box-shadow 0.3s ease-in-out;
 }
 
+@media screen and (max-width: 600px) {
+  .unlockBlooks {
+    display: none;
+  }
+}
+
 .unlockBlooks:hover {
   box-shadow: inset 0 -0.5vw rgb(169, 107, 20), 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
+
 .spin {
   display: flex;
   align-items: center;
@@ -169,9 +224,19 @@ body {
   transition: box-shadow 0.3s ease-in-out;
 }
 
+@media screen and (max-width: 600px) {
+  .spin {
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 .spin:hover {
   box-shadow: inset 0 -0.5vw rgb(54, 112, 15), 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
+
 .manageBlooks {
   background-color: rgb(30, 146, 255);
   box-shadow: inset 0 -0.365vw rgb(18, 76, 130), 3px 3px 15px rgba(0, 0, 0, 0.6);
@@ -181,6 +246,7 @@ body {
 .manageBlooks:hover {
   box-shadow: inset 0 -0.5vw rgb(18, 76, 130), 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
+
 .stat_box {
   background: #5e046e;
   padding: 40px;
@@ -196,6 +262,18 @@ body {
   transform: translate(-50%, 50%);
   margin-top: 40px;
 }
+
+@media screen and (max-width: 600px) {
+  .stat_box {
+    background: transparent;
+    width: 70%;
+    padding: 20px;
+    font-size: 18px;
+    left: 50%;
+    box-shadow: none;
+  }
+}
+
 .stat_header {
   position: absolute;
   top: -24px;
@@ -209,6 +287,13 @@ body {
   box-shadow: inset 0 -0.365vw #53055c, 3px 3px 15px rgba(0, 0, 0, 0.6);
   border: solid 4px #53055c;
 }
+
+@media screen and (max-width: 600px) {
+  .stat_header {
+    display: none;
+  }
+}
+
 .stat_header::before {
   content: ' ';
   position: absolute;
@@ -219,12 +304,14 @@ body {
   border-radius: 10px;
   z-index: -1;
 } 
+
 .inner_stat_container {
   display: flex;
   width: 100%;
   justify-content: space-between;
   align-items: center;
 }
+
 .info_stat_box {
   background: #6f057a;
   padding: 20px;
@@ -235,6 +322,15 @@ body {
   font-size: 20px;
   box-shadow: inset 0 -0.365vw #570066, 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
+
+@media screen and (max-width: 600px) {
+  .info_stat_box {
+    width: 30%;
+    padding: 10px;
+    font-size: 14px;
+  }
+}
+
 .token_stat_box {
   background: #6f057a;
   padding: 20px;
@@ -246,6 +342,15 @@ body {
   font-size: 20px;
   box-shadow: inset 0 -0.365vw #570066, 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
+
+@media screen and (max-width: 600px) {
+  .token_stat_box {
+    width: 30%;
+    padding: 10px;
+    font-size: 14px;
+  }
+}
+
 .badge {
   display: inline-block;
   height: 35px;
