--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -24,6 +24,25 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -48,6 +67,12 @@ body {
   text-shadow: #000 1px 0 13px;
 }
 
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
+}
+
 .leaderboard_Container {
   width: 75%;
   height: 700px;
@@ -70,6 +95,14 @@ body {
   overflow: hidden;
 }
 
+@media screen and (max-width: 600px) {
+  .leaderboard_Container {
+    width: 90%;
+    height: 500px;
+    font-size: 20px;
+  }
+}
+
 .leaderboard_title {
   background: #6f057a;
   padding: 20px;
@@ -83,6 +116,12 @@ body {
   position: absolute; 
   top: 10%;
   left: 10%;
+}
+
+@media screen and (max-width: 600px) {
+  .leaderboard_title {
+    display: none;
+  }
 }
 
 .leaderboard_messages {
@@ -101,8 +140,13 @@ body {
   cursor: pointer
 }
 
-.username {
-
+@media screen and (max-width: 600px) {
+  .leaderboard_messages {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 /*
