--- a/public/css/login.css
+++ b/public/css/login.css
@@ -111,8 +111,7 @@ body {
     top: 1%;
     font-size: 24px;
     color: #fff;
-    text-shadow: #000 1px 0 13px;
-  }
+    text-shadow: #000 1px 0 13px;  }
 }
 .login-container {
   width: 440px;
