--- a/public/css/pixels.css
+++ b/public/css/pixels.css
@@ -24,6 +24,25 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -34,9 +53,11 @@ body {
   text-shadow: #000 1px 0 13px;
   transition: transform 0.3s ease-in-out;
 }
+
 .navbar a:hover {
   transform: rotate(360deg);
 }
+
 .title_p {
   margin-left: 92%;
   position: absolute;
@@ -45,6 +66,13 @@ body {
   color: #fff;
   text-shadow: #000 1px 0 13px;
 }
+
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
+}
+
 .container {
   width: 50%;
   background-color: #6f057a;
@@ -56,6 +84,13 @@ body {
   left: 5%;
   overflow-y: auto;
   max-height: 80vh;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 83%;
+    left: 5%;
+  }
 }
 
 .pack {
@@ -111,6 +146,12 @@ body {
   color: white;
   width: 400px;
   height: 430px;
+}
+
+@media screen and (max-width: 600px) {
+  .blook-details {
+    display: none;
+  }
 }
 
 .blook-details img {
