--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .bg_img {
   position: fixed;
   width: 250%;
@@ -17,6 +18,7 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
@@ -24,6 +26,25 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -48,20 +69,29 @@ body {
   text-shadow: #000 1px 0 13px;
 }
 
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
+}
+
 .main-content {
   padding: 20px;
 }
+
 .page-title {
   color: white;
   text-shadow: 0px 0px 10px #000;
   text-align: center;
 }
+
 .content-container {
   display: flex;
   justify-content: space-around;
   margin-top: 40px;
 }
-.profile-section, .theme-section {
+
+.profile-section {
   width: 25%;
   background-color: #6f057a;
   color: white;
@@ -70,14 +100,24 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   position: relative;
 }
+
+@media screen and (max-width: 600px) {
+  .profile-section {
+    width: 100%;
+    margin-bottom: 20px
+  }
+}
+
 .profile-details h3, .profile-details a {
   margin: 15px 0;
 }
+
 .separator {
   border: 3px solid white;
   border-radius: 100px;
   margin: 10px 0;
 }
+
 .sign-out {
   color: white;
   text-decoration: none;
@@ -91,6 +131,18 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   position: relative;
 }
+
+@media screen and (max-width: 600px) {
+  .edit-info-section {
+    width: 80%;
+    margin-bottom: 20px;
+    position: fixed;
+    bottom: 2%;
+    left: 10;
+  }
+}
+
+
 .changeUser {
   text-decoration: underline white;
   text-decoration-thickness: 2px;
