--- a/public/panel/enc/enc.css
+++ b/public/panel/enc/enc.css
@@ -25,6 +25,23 @@ body {
   border-bottom-right-radius: 15px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
 .navbar a {
   float: left;
   font-size: 16px;
@@ -48,6 +65,11 @@ body {
   text-shadow: #000 1px 0 13px;
 }
 
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
+}
 .welcome-title {
   font-family: Pixelify Sans;
   color: white;
