--- a/public/css/market.css
+++ b/public/css/market.css
@@ -29,8 +29,8 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
 
@@ -151,7 +151,13 @@ body {
 
 @media screen and (max-width: 600px) {
   .rarityButton {
-    display: none;
+    left: 50%;
+    bottom: 89%;
+    width: 80px;
+    height: 40px;
+    font-size: 10px;
+    
+
   }
 }
 
