--- a/public/css/register.css
+++ b/public/css/register.css
@@ -22,9 +22,9 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
 
 @media screen and (max-width: 600px) {
