--- a/public/panel/formsManager/forms.css
+++ b/public/panel/formsManager/forms.css
@@ -17,13 +17,32 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0; 
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -45,6 +64,17 @@ body {
   font-size: 26px;
   color: #fff;
   text-shadow: #000 1px 0 13px;
+}
+
+@media screen and (max-width: 600px) {
+  .title_p {
+    margin-left: 80%;
+    position: absolute;
+    top: 1%;
+    font-size: 24px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
+  }
 }
 
 section input[type="text"]:focus {
@@ -174,6 +204,13 @@ button:hover {
   padding: 20px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   transition: transform 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .account-request {
+    width: 80%;
+    margin: 10px auto
+  }
 }
 
 .account-request:hover {
