--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -148,6 +148,11 @@ body {
   text-decoration-thickness: 2px;
   cursor: pointer;
 }
+.changePass {
+  text-decoration: underline white;
+  text-decoration-thickness: 2px;
+  cursor: pointer;
+}
 .instantOpen {
   text-decoration: underline white;
   text-decoration-thickness: 2px;
