--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -152,16 +152,26 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-.message{
+.message {
   width: 100%;
-  height: 10%;
+  height: auto;
   display: flex;
   font-size: 12px;
   justify-content: left;
   align-items: center;
   margin-left: 6px;
   gap: 10px;
+  cursor: pointer;
+  position: relative;
 }
+.message:hover {
+  background-color: rgb(117, 117, 117, 0.3);
+  width: 1000%;
+  border-radius: 5px;
+  transition: background-color 0.1s ease;
+  height: auto;
+}
+
 .pfp img{
   width: 65px;
   height: auto;
@@ -242,4 +252,8 @@ body {
 .close:hover,
 .close:focus {
   color: red;
+}
+.mention {
+    background-color: rgba(255, 255, 0, 0.5);
+    border-radius: 5px;
 }
