--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -86,8 +86,8 @@ body {
 }
 #pfp {
   border-radius: 5px;
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   margin-right: 10px;
   cursor: pointer;
 }
@@ -109,7 +109,7 @@ body {
 
 #banner {
   width: 350px;
-  height: 100px;
+  height: 120px;
   display: block;
   margin-left: 0%;
 }
@@ -156,7 +156,7 @@ body {
   justify-content: center;
   white-space: nowrap;
   width: 160px;
-  height: 40px;
+  height: 45px;
   font-size: 14px;
   border-radius: 5px;
   background-color: #eb6234;
@@ -181,7 +181,7 @@ body {
   justify-content: center;
   white-space: nowrap;
   width: 160px;
-  height: 40px;
+  height: 45px;
   font-size: 14px;
   border-radius: 5px;
   background-color: rgb(255, 163, 30);
@@ -211,7 +211,7 @@ body {
   justify-content: center;
   white-space: nowrap;
   width: 160px;
-  height: 40px;
+  height: 45px;
   font-size: 14px;
   border-radius: 5px;
   color: white;
@@ -235,7 +235,7 @@ body {
 }
 
 .spin:hover {
-  box-shadow: inset 0 -0.5vw rgb(54, 112, 15), 3px 3px 15px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 -0.5vw #006400, 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
 
 .manageBlooks {
@@ -277,13 +277,14 @@ body {
 
 .stat_header {
   position: absolute;
-  top: -24px;
+  top: -34px;
   left: 1%;
   transform: translateX(-50%);
   padding: 10px 20px;
   border-radius: 5px;
   background: linear-gradient(#800097,#800097 50%,#6f0288 50.01%,#6f0288);
-  font-size: 20px;
+  font-size: 26px;
+  font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
   box-shadow: inset 0 -0.365vw #53055c, 3px 3px 15px rgba(0, 0, 0, 0.6);
   border: solid 4px #53055c;
@@ -318,8 +319,8 @@ body {
   padding: 20px;
   border-radius: 5px;
   display: flex;
-  align-items: center;
-  width: 23%;
+  justify-content: center; 
+  align-items: center;  width: 23%;
   font-size: 20px;
   box-shadow: inset 0 -0.365vw #570066, 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
@@ -342,6 +343,8 @@ body {
   height: 48px;
   font-size: 20px;
   box-shadow: inset 0 -0.365vw #570066, 3px 3px 15px rgba(0, 0, 0, 0.6);
+   justify-content: center; 
+   align-items: center;
 }
 
 @media screen and (max-width: 600px) {
@@ -358,4 +361,5 @@ body {
   width: 35px;
   user-drag: none;
   -webkit-user-drag: none;
+  margin-right: 5px;
 }
