--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .bg_img {
   position: fixed;
   width: 250%;
@@ -17,6 +18,7 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
@@ -76,12 +78,12 @@ body {
 .leaderboard_Container {
   width: 75%;
   height: 700px;
-  background-color: #6f057a;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 10px;
+  background: radial-gradient(circle, #61056b, #6f057a);
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   font-size: 2.604vw;
   color: #fff;
@@ -104,15 +106,14 @@ body {
 }
 
 .leaderboard_title {
-  background: #6f057a;
   padding: 20px;
   border-radius: 5px;
   display: flex;
   align-items: center;
   width: 165px; 
   font-size: 24px;
-  box-shadow: inset 0 -0.365vw #570066, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  margin-bottom: 10px; 
+  background: radial-gradient(circle, #61056b, #6f057a);
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  margin-bottom: 10px; 
   position: absolute; 
   top: 10%;
   left: 10%;
@@ -125,15 +126,14 @@ body {
 }
 
 .leaderboard_messages {
-  background: #6f057a;
   padding: 20px;
   border-radius: 5px;
   display: flex;
   align-items: center;
   width: 120px; 
   font-size: 24px;
-  box-shadow: inset 0 -0.365vw #570066, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  margin-bottom: 10px; 
+  background: radial-gradient(circle, #61056b, #6f057a);
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  margin-bottom: 10px; 
   position: absolute; 
   top: 10%;
   left: 81.5%;
