--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -141,9 +141,17 @@ body {
   margin-top: 10px;
   padding: 7px;
   border-radius: 5px;
-  background-color: #6e057b;
-  box-shadow: inset 0 -0.365vw #5a0464, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  background: radial-gradient(circle, #61056b, #6f057a);
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   margin-left: 20px;
+}
+.badge {
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  user-drag: none;
+  -webkit-user-drag: none;
+  margin-right: 5px;
 }
 .button_container {
   display: flex;
@@ -353,13 +361,4 @@ body {
     padding: 10px;
     font-size: 14px;
   }
-}
-
-.badge {
-  display: inline-block;
-  height: 35px;
-  width: 35px;
-  user-drag: none;
-  -webkit-user-drag: none;
-  margin-right: 5px;
 }
