--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -87,7 +87,7 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   font-size: 2.604vw;
   color: #fff;
-  text-shadow: #000 1px 0 13px;
+  text-shadow: #000 1px 0 8px;
   text-align: center;
   margin: 0;
   display: flex;
@@ -113,7 +113,8 @@ body {
   width: 165px; 
   font-size: 24px;
   background: radial-gradient(circle, #61056b, #6f057a);
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  margin-bottom: 10px; 
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  
+  margin-bottom: 10px; 
   position: absolute; 
   top: 10%;
   left: 10%;
@@ -133,11 +134,12 @@ body {
   width: 120px; 
   font-size: 24px;
   background: radial-gradient(circle, #61056b, #6f057a);
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  margin-bottom: 10px; 
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  
+  margin-bottom: 10px; 
   position: absolute; 
   top: 10%;
   left: 81.5%;
-  cursor: pointer
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
