--- a/public/css/market.css
+++ b/public/css/market.css
@@ -114,9 +114,11 @@ body {
   background: #6f057a;
   padding: 20px;
   border-radius: 5px;
-  width: 260px;
+  width: 190px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   font-size: 20px;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   margin-left: 50%;
@@ -156,8 +158,6 @@ body {
     width: 80px;
     height: 40px;
     font-size: 10px;
-    
-
   }
 }
 
