--- a/public/panel/auditLogs/auditLogs.css
+++ b/public/panel/auditLogs/auditLogs.css
@@ -3,7 +3,6 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 .bg_img {
   position: fixed;
@@ -21,7 +20,26 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+}
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
 .navbar a {
   float: left;
@@ -46,6 +64,11 @@ body {
   text-shadow: #000 1px 0 13px;
 }
 
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
+}
 .welcome-title {
   font-family: Pixelify Sans;
   color: white;
@@ -104,52 +127,24 @@ body {
 h1 {
   margin-top: 30px;
 }
-
 input[type="text"] {
-  background-color: #6f057a;
-  box-shadow: inset 0 -0.365vw #570066, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  color: white;
-  padding: 10px 14px;
-  border: none;
-  border-radius: 5px;
-  margin: 5px;
-  font-family: Pixelify Sans;
+  padding: 10px;
   font-size: 16px;
-}
-
-button {
-  background: #6f057a;
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  color: white;
-  padding: 12px 17px;
-  border: none;
   border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  font-family: Pixelify Sans;
-  font-size: 18px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+}
+::-webkit-scrollbar {
+  width: 13px;
 }
 
-.user-action-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 450px;
-  width: 450px;
-  background: radial-gradient(circle, #61056b, #6f057a);
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  position: absolute;
-  left: 3%;
+::-webkit-scrollbar-track {
+  background: #61056b;
+  border-radius: 10px;
 }
 
-.user-input-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 450px;
-  width: 450px;
-  background: radial-gradient(circle, #61056b, #6f057a);
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  position: absolute;
-  right: 3%;
+::-webkit-scrollbar-thumb {
+  background-color: #6f057a;
+  border-radius: 10px;
+  border: 3px solid #61056b;
 }
