--- a/public/panel/formsManager/forms.css
+++ b/public/panel/formsManager/forms.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .bg_img {
   position: fixed;
   width: 250%;
@@ -127,22 +128,6 @@ input[type="text"] {
   margin-bottom: 10px;
 }
 
-button {
-  padding: 8px 16px;
-  font-size: 14px; 
-  border: none;
-  border-radius: 3px;
-  background-color: #B011C2;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  margin: 5px; 
-}
-
-button:hover {
-  background-color: #8E038D;
-}
-
 .overlay-container {
   position: fixed;
   display: flex;
@@ -196,14 +181,13 @@ button:hover {
   font-family: Pixelify Sans;
   padding: 20px;
   margin: 10px;
-  width: 1500px;
-  background-color: #6f057a;
+  width: 600px;
   color: white;
   cursor: pointer;
   border-radius: 5px;
   padding: 20px;
+  background: radial-gradient(circle, #61056b, #6f057a);
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  transition: transform 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 600px) {
@@ -211,10 +195,6 @@ button:hover {
     width: 80%;
     margin: 10px auto
   }
-}
-
-.account-request:hover {
-  transform: scale(0.95);
 }
 
 .attribute {
@@ -227,28 +207,22 @@ button:hover {
   padding: 16px 24px;
   cursor: pointer;
   border: none;
-  border-radius: 10px; 
-  background-color: #6f057a; 
+  border-radius: 5px; 
   color: #fff;
-  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  margin: 0 10px;
   transition: all 0.3s ease-in-out; 
+  background: #6f057a;
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
 
 .button:hover {
-  background-color: #920f9d; 
-  box-shadow: inset 0 -0.365vw #920f9d;
-  transform: scale(1.05); 
+  box-shadow: inset 0 -0.465vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
 }
 
 .button-container {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.button:hover {
-  font-family: Pixelify Sans;
-  background-color: #8e038d;
 }
 
 .no-requests-message {
