--- a/public/css/gifts.css
+++ b/public/css/gifts.css
@@ -18,6 +18,7 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
@@ -25,6 +26,25 @@ body {
   border-bottom-right-radius: 0;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -35,9 +55,7 @@ body {
   text-shadow: #000 1px 0 13px;
   transition: transform 0.3s ease-in-out;
 }
-.navbar a:hover {
-  transform: rotate(360deg);
-}
+
 .title_p {
   margin-left: 92%;
   position: absolute;
@@ -46,19 +64,17 @@ body {
   color: #fff;
   text-shadow: #000 1px 0 13px;
 }
-.button {
-  width: 240px;
-  font-size: 18px;
-  border-radius: 5px;
-  background-color: #6f057a;
-  box-shadow: inset 0 -0.265vw #5a0463, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 10px 0;
+
+.blooksBox {
+  position: absolute;
+  top: 10%;
+  right: 1%;
+  width: 350px;
+  height: 700px;
   font-family: Pixelify Sans;
-  cursor: pointer;
+  background: radial-gradient(circle, #61056b, #6f057a);
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  color: white;
   text-align: center;
-  text-decoration: none;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  line-height: 100px;
 }
