--- a/public/css/credits.css
+++ b/public/css/credits.css
@@ -135,14 +135,9 @@ body {
   color: white;
   border: none;
   padding: 10px 20px;
-  cursor: pointer;
   box-shadow: inset 0 -0.365vw #5a0463, 3px 3px 15px rgba(0, 0, 0, 0.6);
   font-family: 'Pixelify Sans';
   text-align: center;
-  transition: transform 0.2s ease-in-out;
-}
-.credits-container:hover {
-  transform: scale(0.9);
 }
 .credits-container h3 {
   color: #fff;
@@ -158,6 +153,16 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 5px;
+  cursor: pointer;
+}
+.credits-container img:hover {
+  transform: scale(0.95);
+  transition: transform 0.2s ease-in-out;
+}
+
+.credits-container img:active {
+  transform: scale(0.85);
+  transition: transform 0.1s ease-in-out;
 }
 .credits-container h4 {
   color: #fff;
