--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -73,8 +73,7 @@ body {
 
 .leaderboard_Container {
   width: 75%;
-  height: 80%;
-  margin-top: 5vh;
+  height: 700px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -91,6 +90,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 600px) {
