--- a/public/panel/enc/enc.css
+++ b/public/panel/enc/enc.css
@@ -70,6 +70,7 @@ body {
     display: none;
   }
 }
+
 .welcome-title {
   font-family: Pixelify Sans;
   color: white;
@@ -90,6 +91,12 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
+
+.button:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
+}
+
 .overlay-container {
   position: fixed;
   top: 0;
@@ -101,12 +108,14 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .overlay-content {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
   text-align: center;
 }
+
 .loader {
   border: 8px solid #f3f3f3; 
   border-top: 8px solid #D240DC;
@@ -115,13 +124,16 @@ body {
   height: 25px;
   animation: spin 2s linear infinite;
 }
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
 h1 {
   margin-top: 30px;
 }
+
 input[type="text"] {
   padding: 10px;
   font-size: 16px;
