--- a/public/panel/news/newsedit.css
+++ b/public/panel/news/newsedit.css
@@ -73,10 +73,10 @@ input[type="text"], textarea {
   width: calc(100% - 22px);
   padding: 10px;
   font-size: 16px;
-  border-radius: 5px;
   margin-bottom: 10px;  
-  background-color: #5a0463;
-  border: none;
+  background-color: #6f057a;
+  border: 3px solid rgb(94, 4, 110);  
+  border-radius: 5px;
 }
 
 input[type="submit"] {
@@ -88,7 +88,7 @@ input[type="submit"] {
   border-radius: 5px;
   background-color: #6f057a;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  color: #fff;
+  color: #ffffff;
   cursor: pointer;
   transition: background-color 0.3s;
 }
