--- a/public/css/market.css
+++ b/public/css/market.css
@@ -34,24 +34,6 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
 
-@media screen and (max-width: 600px) {
-  .navbar {
-    border-radius: 0;
-    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
-    width: 100%;
-  }
-  .navbar a, .dropdown .dropbtn {
-    float: none;
-    display: block;
-    padding: 10px;
-  }
-  .dropdown-content {
-    position: relative;
-    box-shadow: none;
-    border-radius: 0;
-  }
-}
-
 .navbar a {
   float: left;
   font-size: 16px;
@@ -61,6 +43,25 @@ body {
   text-decoration: none;
   text-shadow: #000 1px 0 13px;
   transition: transform 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: left;
+    display: block;
+    padding: 10px;
+    font-size: 14px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
 
 .title_p {
@@ -149,11 +150,7 @@ body {
 
 @media screen and (max-width: 600px) {
   .rarityButton {
-    left: 50%;
-    bottom: 89%;
-    width: 80px;
-    height: 40px;
-    font-size: 10px;
+    display: none;
   }
 }
 
