--- a/public/css/notifications.css
+++ b/public/css/notifications.css
@@ -37,6 +37,51 @@ body {
   text-shadow: #000 1px 0 13px;
 }
 
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: #000 1px 0 13px;
+  transition: transform 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: left;
+    display: block;
+    padding: 10px;
+    font-size: 14px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
+.title_p {
+  margin-left: 92%;
+  position: absolute;
+  top: 1%;
+  font-size: 26px;
+  color: #fff;
+  text-shadow: #000 1px 0 13px;
+}
+
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
+}
+
 .dropdown {
   float: left;
   overflow: hidden;
@@ -53,15 +98,6 @@ body {
   margin: 0;
 }
 
-.title_p {
-  margin-left: 48%;
-  position: absolute;
-  top: 1%;
-  font-size: 26px;
-  color: #fff;
-  text-shadow: #000 1px 0 13px;
-}
-
 .notifications {
   font-family: Pixelify Sans;
   padding: 20px;
@@ -73,4 +109,10 @@ body {
   padding: 20px;
   background: radial-gradient(circle, #61056b, #6f057a);
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+}
+
+@media screen and (max-width: 600px) {
+  .notifications {
+    width: 300px;
+  }
 }
