--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -27,23 +27,6 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
 
-@media screen and (max-width: 600px) {
-  .navbar {
-    border-radius: 0;
-    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
-    width: 100%;
-  }
-  .navbar a, .dropdown .dropbtn {
-    float: none;
-    display: block;
-    padding: 10px;
-  }
-  .dropdown-content {
-    position: relative;
-    box-shadow: none;
-    border-radius: 0;
-  }
-}
 
 .navbar a {
   float: left;
@@ -54,6 +37,25 @@ body {
   text-decoration: none;
   text-shadow: #000 1px 0 13px;
   transition: transform 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: left;
+    display: block;
+    padding: 10px;
+    font-size: 14px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
 
 .title_p {
@@ -67,7 +69,12 @@ body {
 
 @media screen and (max-width: 600px) {
   .title_p {
-    display: none;
+    margin-left: 80%;
+    position: absolute;
+    top: 0.7%;
+    font-size: 18px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
   }
 }
 
@@ -133,7 +140,7 @@ body {
     width: 80%;
     margin-bottom: 20px;
     position: fixed;
-    bottom: 2%;
+    bottom: 20%;
     left: 10;
   }
 }
