--- a/public/panel/formsManager/forms.css
+++ b/public/panel/formsManager/forms.css
@@ -27,23 +27,6 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
 
-@media screen and (max-width: 600px) {
-  .navbar {
-    border-radius: 0; 
-    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
-  }
-  .navbar a, .dropdown .dropbtn {
-    float: none;
-    display: block;
-    padding: 10px;
-  }
-  .dropdown-content {
-    position: relative;
-    box-shadow: none;
-    border-radius: 0;
-  }
-}
-
 .navbar a {
   float: left;
   font-size: 16px;
@@ -55,9 +38,25 @@ body {
   transition: transform 0.3s ease-in-out;
 }
 
-.navbar a:hover {
-  transform: rotate(360deg);
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: left;
+    display: block;
+    padding: 10px;
+    font-size: 14px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
+
 .title_p {
   margin-left: 92%;
   position: absolute;
@@ -69,7 +68,12 @@ body {
 
 @media screen and (max-width: 600px) {
   .title_p {
-    display: none;
+    margin-left: 80%;
+    position: absolute;
+    top: 0.7%;
+    font-size: 18px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
   }
 }
 
