--- a/public/panel/notifications/notifications.css
+++ b/public/panel/notifications/notifications.css
@@ -25,6 +25,7 @@ body {
   border-bottom-right-radius: 0;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -35,9 +36,26 @@ body {
   text-shadow: #000 1px 0 13px;
   transition: transform 0.3s ease-in-out;
 }
-.navbar a:hover {
-  transform: rotate(360deg);
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: left;
+    display: block;
+    padding: 10px;
+    font-size: 14px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
+
 .title_p {
   margin-left: 92%;
   position: absolute;
@@ -45,6 +63,17 @@ body {
   font-size: 26px;
   color: #fff;
   text-shadow: #000 1px 0 13px;
+}
+
+@media screen and (max-width: 600px) {
+  .title_p {
+    margin-left: 80%;
+    position: absolute;
+    top: 0.7%;
+    font-size: 18px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
+  }
 }
 .button {
   width: 240px;
