--- a/public/panel/packEditorPage/packeditor.css
+++ b/public/panel/packEditorPage/packeditor.css
@@ -27,15 +27,28 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
 
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: #000 1px 0 13px;
+  transition: transform 0.3s ease-in-out;
+}
+
 @media screen and (max-width: 600px) {
   .navbar {
-    border-radius: 0; 
-    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+    border-radius: 0;
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+    width: 100%;
   }
   .navbar a, .dropdown .dropbtn {
-    float: none;
+    float: left;
     display: block;
     padding: 10px;
+    font-size: 14px;
   }
   .dropdown-content {
     position: relative;
@@ -44,33 +57,23 @@ body {
   }
 }
 
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: #ffffff;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  text-shadow: 0 1px 13px #000000;
-  transition: transform 0.3s ease-in-out;
-}
-
-.navbar a:hover {
-  transform: rotate(360deg);
-}
-
 .title_p {
   margin-left: 92%;
   position: absolute;
   top: 1%;
   font-size: 26px;
-  color: #ffffff;
-  text-shadow: 0 1px 13px #000000;
+  color: #fff;
+  text-shadow: #000 1px 0 13px;
 }
 
 @media screen and (max-width: 600px) {
   .title_p {
-    display: none;
+    margin-left: 80%;
+    position: absolute;
+    top: 0.7%;
+    font-size: 18px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
   }
 }
 
