--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -137,6 +137,7 @@ body {
   font-size: 24px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
 #role {
   position: absolute;
   top: 50%;
@@ -145,6 +146,7 @@ body {
   font-size: 18px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
 #badges-container {
   margin-top: 10px;
   padding: 7px;
@@ -153,6 +155,18 @@ body {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
   margin-left: 20px;
 }
+
+@media screen and (max-width: 600px) {
+  #badges-container {
+    
+    margin-left: 0;
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .badge {
   display: inline-block;
   height: 35px;
@@ -162,11 +176,13 @@ body {
   cursor: pointer;
   margin-right: 5px;
 }
+
 .button_container {
   display: flex;
   gap: 12px;
   margin-top: 0px;
 }
+
 .button {
   display: flex;
   align-items: center;
@@ -369,5 +385,47 @@ body {
     width: 30%;
     padding: 10px;
     font-size: 14px;
+  }
+}
+
+.token {
+  display: inline-block;
+  width: fit-content;
+  height: 42px;
+  margin-left: 10px;
+  transform: rotate(20deg);
+}
+
+@media screen and (max-width: 600px) {
+  .token {
+    display: none;
+  }
+}
+
+.lock {
+  display: inline-block;
+  width: fit-content;
+  height: 46px;
+  margin-left: 10px;
+  transform: rotate(20deg);
+}
+
+@media screen and (max-width: 600px) {
+  .lock {
+    display: none;
+  }
+}
+
+.speechBubble {
+  display: inline-block;
+  width: fit-content;
+  height: 46px;
+  margin-left: 10px;
+  transform: rotate(20deg);
+}
+
+@media screen and (max-width: 600px) {
+  .speechBubble {
+    display: none;
   }
 }
