--- a/public/css/market.css
+++ b/public/css/market.css
@@ -132,6 +132,26 @@ body {
 
 @media screen and (max-width: 600px) {
   .token_box {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    position: fixed;
+    top: 70px;
+    bottom: auto;
+    left: -170px;
+    width: 105px;
+  }
+}
+
+.tokenImg {
+  display: inline-block;
+  width: fit-content;
+  height: 42px;
+  margin-left: 10px;
+  transform: rotate(20deg);
+}
+
+@media screen and (max-width: 600px) {
+  .tokenImg {
     display: none;
   }
 }
