--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -98,6 +98,7 @@ body {
   height: 120px;
   margin-right: 10px;
   cursor: pointer;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
@@ -120,6 +121,7 @@ body {
   height: 120px;
   display: block;
   margin-left: 0%;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
@@ -158,7 +160,6 @@ body {
 
 @media screen and (max-width: 600px) {
   #badges-container {
-    
     margin-left: 0;
     margin-top: 10px;
     width: 100%;
@@ -171,10 +172,10 @@ body {
   display: inline-block;
   height: 35px;
   width: 35px;
-  user-drag: none;
   -webkit-user-drag: none;
   cursor: pointer;
   margin-right: 5px;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 .button_container {
@@ -394,6 +395,7 @@ body {
   height: 42px;
   margin-left: 10px;
   transform: rotate(20deg);
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
@@ -408,6 +410,7 @@ body {
   height: 46px;
   margin-left: 10px;
   transform: rotate(20deg);
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
@@ -422,6 +425,7 @@ body {
   height: 46px;
   margin-left: 10px;
   transform: rotate(20deg);
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
