--- a/public/css/store.css
+++ b/public/css/store.css
@@ -1,3 +1,156 @@
+body {
+  font-family: Pixelify Sans;
+  color: white;
+  margin: 0;
+  padding: 0;
+}
+
+.bg_img {
+  position: fixed;
+  width: 250%;
+  height: 250%;
+  top: 50%;
+  left: 50%;
+  z-index: -9999;
+  background-size: 550px;
+  background-position: -100px -100px;
+  background-image: url("https://izumiihd.github.io/pixelitcdn/assets/background.png");
+  transform: translate(-50%, -50%) rotate(15deg);
+  opacity: 0.1;
+  animation: moveBackground 25s linear infinite ;
+}
+
+@keyframes moveBackground {
+  from { background-position: -100px -100px; }
+  to { background-position: -100px 1100px; }
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #6f057a;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0; 
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: #000 1px 0 13px;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: purple;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: inset 0 -0.365vw #777378, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+
+}
+
+.dropdown-content a:hover {
+  background-color: purple;
+}
+
+.dropdown-content a:last-child:hover{
+  border-radius: 0 0 10px 10px;
+  box-shadow: inset 0 -0.365vw #660066, 3px 3px 15px rgba(0, 0, 0, 0.6);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.title_p {
+  margin-left: 92%;
+  position: absolute;
+  top: 1%;
+  font-size: 26px;
+  color: #fff;
+  text-shadow: #000 1px 0 13px;
+}
+
+@media screen and (max-width: 600px) {
+  .title_p {
+    margin-left: 80%;
+    position: absolute;
+    top: 1%;
+    font-size: 24px;
+    color: #fff;
+    text-shadow: #000 1px 0 13px;
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.body-bg-color { 
+  background-color: #6d0180; 
+}
+
 .store-item {
   text-align: center;
   padding: 20px;
@@ -25,7 +178,6 @@
   float: none;
 }
 
-
 .pixelitPlusPurchase {
   text-align: center;
   font-weight: bold; 
@@ -50,13 +202,14 @@
 .price {
   font-size: 100px;
   font-weight: bold;
-  color: #FFFFF;
+  color: white;
 }
 
 img[alt="Pixelit Plus Badge"] {
   width: 150px;
   height: 150px;
   margin-bottom: 10px;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 .item-name {
@@ -82,4 +235,12 @@ font-weight: bold;
   background-color: rgba(0, 0, 0, 0.5); 
   color: white; 
   padding: 10px;
+}
+
+.donate {
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
+}
+
+.plus {
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
