made dashboard role edits

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -146,6 +146,7 @@ body {
   transform: translate(-50%, 0%);
   font-size: 18px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  white-space: nowrap;
 }
 
 #badges-container {
